readability API is getting a nice reader view!!

--- a/Charity Search/Base.lproj/Main.storyboard
+++ b/Charity Search/Base.lproj/Main.storyboard
@@ -577,7 +577,7 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Username)" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DT-Qw-cZJ">
-                                <rect key="frame" x="175" y="221" width="145" height="24"/>
+                                <rect key="frame" x="175" y="211" width="145" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Egr-wh-exH"/>
                                 </constraints>
@@ -615,7 +615,7 @@
                             <constraint firstItem="KU5-dy-fEN" firstAttribute="top" secondItem="S2C-Y2-vyM" secondAttribute="bottom" id="7HH-fm-8Yd"/>
                             <constraint firstItem="0DT-Qw-cZJ" firstAttribute="leading" secondItem="7ak-gt-WZx" secondAttribute="trailing" id="9mW-u0-Koj"/>
                             <constraint firstItem="ByM-Ym-Rag" firstAttribute="leading" secondItem="7ak-gt-WZx" secondAttribute="leading" constant="-10" id="FQq-05-oqz"/>
-                            <constraint firstItem="0DT-Qw-cZJ" firstAttribute="bottom" secondItem="ByM-Ym-Rag" secondAttribute="bottom" id="G40-IN-g6x"/>
+                            <constraint firstItem="0DT-Qw-cZJ" firstAttribute="bottom" secondItem="ByM-Ym-Rag" secondAttribute="bottom" constant="-10" id="G40-IN-g6x"/>
                             <constraint firstItem="7ak-gt-WZx" firstAttribute="bottom" secondItem="ByM-Ym-Rag" secondAttribute="bottom" constant="70" id="LgB-ve-P0T"/>
                             <constraint firstItem="ByM-Ym-Rag" firstAttribute="leading" secondItem="fQM-L5-9gy" secondAttribute="leading" id="Nhm-7s-FcC"/>
                             <constraint firstItem="ByM-Ym-Rag" firstAttribute="top" secondItem="fQM-L5-9gy" secondAttribute="top" id="Pg0-TT-bif"/>
@@ -870,7 +870,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0V-Yb-FGo">
-                                <rect key="frame" x="0.0" y="-110" width="320" height="678"/>
+                                <rect key="frame" x="0.0" y="250" width="320" height="318"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="delegate" destination="kdD-Dw-OZl" id="bYX-G6-cqw"/>
@@ -922,7 +922,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="-110" id="GtI-6G-DbX"/>
+                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="250" id="GtI-6G-DbX"/>
                             <constraint firstAttribute="centerX" secondItem="vcF-Dm-YbP" secondAttribute="centerX" id="Hau-mX-zjC"/>
                             <constraint firstItem="drb-Uj-A6n" firstAttribute="top" secondItem="hZ5-Ug-pXh" secondAttribute="bottom" constant="31" id="SU2-cA-2zw"/>
                             <constraint firstAttribute="bottom" secondItem="w0V-Yb-FGo" secondAttribute="bottom" id="YYO-ic-eL3"/>
@@ -952,7 +952,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HzU-FA-AKA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-371" y="104"/>
+            <point key="canvasLocation" x="-348" y="151"/>
         </scene>
         <!--News-->
         <scene sceneID="ljd-JS-fsa">
