added nicer web view using Readability API

--- a/Charity Search/Base.lproj/Main.storyboard
+++ b/Charity Search/Base.lproj/Main.storyboard
@@ -870,7 +870,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0V-Yb-FGo">
-                                <rect key="frame" x="0.0" y="250" width="320" height="318"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="delegate" destination="kdD-Dw-OZl" id="bYX-G6-cqw"/>
@@ -922,7 +922,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="250" id="GtI-6G-DbX"/>
+                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" id="GtI-6G-DbX"/>
                             <constraint firstAttribute="centerX" secondItem="vcF-Dm-YbP" secondAttribute="centerX" id="Hau-mX-zjC"/>
                             <constraint firstItem="drb-Uj-A6n" firstAttribute="top" secondItem="hZ5-Ug-pXh" secondAttribute="bottom" constant="31" id="SU2-cA-2zw"/>
                             <constraint firstAttribute="bottom" secondItem="w0V-Yb-FGo" secondAttribute="bottom" id="YYO-ic-eL3"/>
