--- a/Charity Search/Base.lproj/Main.storyboard
+++ b/Charity Search/Base.lproj/Main.storyboard
@@ -873,7 +873,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0V-Yb-FGo">
-                                <rect key="frame" x="0.0" y="-110" width="320" height="678"/>
+                                <rect key="frame" x="0.0" y="-110" width="320" height="648"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="delegate" destination="kdD-Dw-OZl" id="bYX-G6-cqw"/>
@@ -890,33 +890,13 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bq1-g4-Tq2">
-                                <rect key="frame" x="234" y="538" width="30" height="24"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <state key="normal" title="label">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="showOrHideCharitiesButton:" destination="kdD-Dw-OZl" eventType="touchUpInside" id="oDf-Zy-Cry"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-Ug-pXh">
-                                <rect key="frame" x="195" y="469" width="109" height="68"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-Ug-pXh">
+                                <rect key="frame" x="0.0" y="538" width="320" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="0.70000000000000007" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="109" id="EcC-eN-MDC"/>
-                                    <constraint firstAttribute="height" constant="68" id="FBg-Rj-rWm"/>
+                                    <constraint firstAttribute="height" constant="30" id="j9m-Ed-dh4"/>
                                 </constraints>
-                                <state key="normal">
-                                    <attributedString key="attributedTitle">
-                                        <fragment content="See Related Charities">
-                                            <attributes>
-                                                <font key="NSFont" size="15" name="HelveticaNeue"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                </state>
+                                <state key="normal" title="See Related Charities"/>
                                 <connections>
                                     <action selector="showFloatingMenu:" destination="kdD-Dw-OZl" eventType="touchUpInside" id="Na6-gN-CXB"/>
                                 </connections>
@@ -926,13 +906,12 @@
                         <constraints>
                             <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="-110" id="GtI-6G-DbX"/>
                             <constraint firstAttribute="centerX" secondItem="vcF-Dm-YbP" secondAttribute="centerX" id="Hau-mX-zjC"/>
-                            <constraint firstItem="drb-Uj-A6n" firstAttribute="top" secondItem="hZ5-Ug-pXh" secondAttribute="bottom" constant="31" id="SU2-cA-2zw"/>
-                            <constraint firstAttribute="bottom" secondItem="w0V-Yb-FGo" secondAttribute="bottom" id="YYO-ic-eL3"/>
-                            <constraint firstAttribute="trailing" secondItem="hZ5-Ug-pXh" secondAttribute="trailing" constant="16" id="dh2-HG-Bcg"/>
-                            <constraint firstItem="Bq1-g4-Tq2" firstAttribute="top" secondItem="hZ5-Ug-pXh" secondAttribute="bottom" constant="1" id="fCj-Ct-yUA"/>
+                            <constraint firstItem="hZ5-Ug-pXh" firstAttribute="top" secondItem="w0V-Yb-FGo" secondAttribute="bottom" id="N2D-I9-v65"/>
+                            <constraint firstAttribute="trailing" secondItem="hZ5-Ug-pXh" secondAttribute="trailing" id="QC0-wH-tx8"/>
+                            <constraint firstItem="hZ5-Ug-pXh" firstAttribute="leading" secondItem="GgD-qw-fol" secondAttribute="leading" id="aUc-bi-3Mi"/>
                             <constraint firstAttribute="trailing" secondItem="w0V-Yb-FGo" secondAttribute="trailing" id="hZF-8Q-iPN"/>
-                            <constraint firstItem="hZ5-Ug-pXh" firstAttribute="centerX" secondItem="Bq1-g4-Tq2" secondAttribute="centerX" constant="0.5" id="rkP-8V-wmE"/>
                             <constraint firstAttribute="centerY" secondItem="vcF-Dm-YbP" secondAttribute="centerY" id="sf7-dF-xCH"/>
+                            <constraint firstItem="drb-Uj-A6n" firstAttribute="top" secondItem="hZ5-Ug-pXh" secondAttribute="bottom" id="trq-cb-Y7N"/>
                             <constraint firstItem="w0V-Yb-FGo" firstAttribute="leading" secondItem="GgD-qw-fol" secondAttribute="leading" id="zgW-AF-Cld"/>
                         </constraints>
                     </view>
@@ -943,11 +922,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="charitiesButton" destination="hZ5-Ug-pXh" id="JZT-ty-yxL"/>
                         <outlet property="heartButton" destination="Uih-0g-YTM" id="k8m-WD-joD"/>
-                        <outlet property="hideButton" destination="Bq1-g4-Tq2" id="0Xt-RS-YNn"/>
                         <outlet property="savedView" destination="vcF-Dm-YbP" id="wOb-Jj-72e"/>
                         <outlet property="webView" destination="w0V-Yb-FGo" id="vPu-eP-Oo4"/>
                     </connections>
