--- a/Charity Search/Base.lproj/Main.storyboard
+++ b/Charity Search/Base.lproj/Main.storyboard
@@ -311,8 +311,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="XHv-yC-4tj">
-                                <rect key="frame" x="0.0" y="241" width="320" height="327"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="XHv-yC-4tj">
+                                <rect key="frame" x="0.0" y="289" width="320" height="267"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="fHx-4o-41F">
                                     <rect key="frame" x="0.0" y="-2" width="320" height="2"/>
@@ -327,16 +327,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmh-Cw-nGa">
-                                                    <rect key="frame" x="17" y="10" width="204" height="46"/>
+                                                    <rect key="frame" x="17" y="10" width="270" height="46"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tka-QG-thb">
-                                                    <rect key="frame" x="17" y="57" width="204" height="35"/>
+                                                    <rect key="frame" x="17" y="57" width="270" height="35"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="34.5" id="aZi-fL-FIc"/>
-                                                        <constraint firstAttribute="width" constant="204" id="f0j-Nh-JOD"/>
+                                                        <constraint firstAttribute="width" constant="270" id="f0j-Nh-JOD"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -377,17 +377,29 @@
                                 </connections>
                             </tableView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="many_hands.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="nlo-XT-6xb">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="241"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="241" id="h8w-hO-eVZ"/>
+                                    <constraint firstAttribute="height" constant="200" id="h8w-hO-eVZ"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efX-bg-Gh5">
-                                <rect key="frame" x="248" y="20" width="56" height="56"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vXn-Oy-W9u">
+                                <rect key="frame" x="162" y="236" width="158" height="28"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="56" id="aGw-cE-S5z"/>
-                                    <constraint firstAttribute="height" constant="56" id="n79-Ok-P6j"/>
+                                    <constraint firstAttribute="height" constant="28" id="fwo-Pi-xWy"/>
+                                    <constraint firstAttribute="width" constant="158" id="kcO-dQ-a0k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="More Info">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efX-bg-Gh5">
+                                <rect key="frame" x="0.0" y="236" width="162" height="28"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="Tnd-dA-dNP"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title=" Options ">
@@ -401,18 +413,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="efX-bg-Gh5" secondAttribute="trailing" constant="16" id="45q-kB-0fc"/>
+                            <constraint firstItem="vXn-Oy-W9u" firstAttribute="centerY" secondItem="efX-bg-Gh5" secondAttribute="centerY" id="6CL-vQ-uFw"/>
                             <constraint firstAttribute="trailing" secondItem="nlo-XT-6xb" secondAttribute="trailing" id="Bq5-1l-1Cw"/>
-                            <constraint firstItem="nlo-XT-6xb" firstAttribute="top" secondItem="USx-gn-PmD" secondAttribute="top" id="MZg-by-9vb"/>
-                            <constraint firstItem="XHv-yC-4tj" firstAttribute="top" secondItem="nlo-XT-6xb" secondAttribute="bottom" id="Njv-KW-AoI"/>
+                            <constraint firstItem="XHv-yC-4tj" firstAttribute="top" secondItem="nlo-XT-6xb" secondAttribute="bottom" constant="2" id="K8o-Hf-Utb"/>
+                            <constraint firstAttribute="trailing" secondItem="vXn-Oy-W9u" secondAttribute="trailing" id="ODb-3I-nJA"/>
                             <constraint firstItem="XHv-yC-4tj" firstAttribute="leading" secondItem="USx-gn-PmD" secondAttribute="leading" id="OPZ-8W-7pU"/>
+                            <constraint firstItem="nlo-XT-6xb" firstAttribute="top" secondItem="RS6-1S-IOs" secondAttribute="bottom" id="Osf-Do-k6r"/>
                             <constraint firstAttribute="trailing" secondItem="XHv-yC-4tj" secondAttribute="trailing" id="Ree-vh-cYu"/>
-                            <constraint firstItem="efX-bg-Gh5" firstAttribute="top" secondItem="RS6-1S-IOs" secondAttribute="bottom" id="ezm-Z7-mdz"/>
+                            <constraint firstItem="efX-bg-Gh5" firstAttribute="top" secondItem="nlo-XT-6xb" secondAttribute="bottom" constant="-28" id="bCd-qY-TWl"/>
                             <constraint firstItem="nlo-XT-6xb" firstAttribute="leading" secondItem="USx-gn-PmD" secondAttribute="leading" id="gJQ-ha-dF8"/>
                             <constraint firstItem="xP9-Gs-oMU" firstAttribute="top" secondItem="XHv-yC-4tj" secondAttribute="bottom" id="ggu-9j-5T7"/>
+                            <constraint firstItem="efX-bg-Gh5" firstAttribute="leading" secondItem="USx-gn-PmD" secondAttribute="leading" id="gqj-NN-hvd"/>
+                            <constraint firstItem="vXn-Oy-W9u" firstAttribute="leading" secondItem="efX-bg-Gh5" secondAttribute="trailing" id="noa-sE-m9I"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="8hr-yo-1Qm"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="optionsButton" destination="efX-bg-Gh5" id="gpn-Zc-INi"/>
                         <outlet property="tableView" destination="XHv-yC-4tj" id="tYr-mr-lOW"/>
@@ -524,7 +540,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L4k-Os-UIP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1482" y="1344"/>
+            <point key="canvasLocation" x="-1546" y="1919"/>
         </scene>
         <!--Profile-->
         <scene sceneID="bZP-EX-XH6">
@@ -872,13 +888,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0V-Yb-FGo">
-                                <rect key="frame" x="0.0" y="-110" width="320" height="648"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-Ug-pXh">
+                                <rect key="frame" x="0.0" y="515" width="320" height="53"/>
+                                <color key="backgroundColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="0.42999999999999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="j9m-Ed-dh4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <state key="normal" title="See Related Charities"/>
                                 <connections>
-                                    <outlet property="delegate" destination="kdD-Dw-OZl" id="bYX-G6-cqw"/>
+                                    <action selector="showFloatingMenu:" destination="kdD-Dw-OZl" eventType="touchUpInside" id="Na6-gN-CXB"/>
                                 </connections>
-                            </webView>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcF-Dm-YbP">
                                 <rect key="frame" x="106" y="261" width="108" height="46"/>
                                 <color key="backgroundColor" red="0.70196080207824707" green="0.70196080207824707" blue="0.70196080207824707" alpha="1" colorSpace="calibratedRGB"/>
@@ -890,21 +911,17 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="hZ5-Ug-pXh">
-                                <rect key="frame" x="0.0" y="538" width="320" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.40000000596046448" blue="0.40000000596046448" alpha="0.70000000000000007" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="j9m-Ed-dh4"/>
-                                </constraints>
-                                <state key="normal" title="See Related Charities"/>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w0V-Yb-FGo">
+                                <rect key="frame" x="0.0" y="-47" width="320" height="562"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <action selector="showFloatingMenu:" destination="kdD-Dw-OZl" eventType="touchUpInside" id="Na6-gN-CXB"/>
+                                    <outlet property="delegate" destination="kdD-Dw-OZl" id="bYX-G6-cqw"/>
                                 </connections>
-                            </button>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="-110" id="GtI-6G-DbX"/>
+                            <constraint firstItem="w0V-Yb-FGo" firstAttribute="top" secondItem="GgD-qw-fol" secondAttribute="top" constant="-47" id="GtI-6G-DbX"/>
                             <constraint firstAttribute="centerX" secondItem="vcF-Dm-YbP" secondAttribute="centerX" id="Hau-mX-zjC"/>
                             <constraint firstItem="hZ5-Ug-pXh" firstAttribute="top" secondItem="w0V-Yb-FGo" secondAttribute="bottom" id="N2D-I9-v65"/>
                             <constraint firstAttribute="trailing" secondItem="hZ5-Ug-pXh" secondAttribute="trailing" id="QC0-wH-tx8"/>
@@ -922,6 +939,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="charitiesButton" destination="hZ5-Ug-pXh" id="JZT-ty-yxL"/>
