--- a/Charity Search/CharityStoryboard.storyboard
+++ b/Charity Search/CharityStoryboard.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleAspectFit" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bie-p8-r1X">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="-110" width="320" height="678"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
@@ -43,7 +43,7 @@
                             <constraint firstItem="Bie-p8-r1X" firstAttribute="leading" secondItem="TUy-zQ-PQW" secondAttribute="leading" id="BDf-tT-lrE"/>
                             <constraint firstAttribute="trailing" secondItem="Bie-p8-r1X" secondAttribute="trailing" id="bbB-gE-gcq"/>
                             <constraint firstAttribute="centerY" secondItem="PzO-PS-nxG" secondAttribute="centerY" id="eLG-wH-ZL4"/>
-                            <constraint firstItem="Bie-p8-r1X" firstAttribute="top" secondItem="TUy-zQ-PQW" secondAttribute="topMargin" id="kTR-j6-P9A"/>
+                            <constraint firstItem="Bie-p8-r1X" firstAttribute="top" secondItem="TUy-zQ-PQW" secondAttribute="topMargin" constant="-110" id="kTR-j6-P9A"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tKJ-vQ-xt7">
