--- a/Charity Search/Base.lproj/Main.storyboard
+++ b/Charity Search/Base.lproj/Main.storyboard
@@ -609,7 +609,7 @@
                                     <constraint firstAttribute="height" constant="22" id="0zh-or-NiA"/>
                                     <constraint firstAttribute="width" constant="22" id="kWR-dV-Fav"/>
                                 </constraints>
-                                <color key="tintColor" red="0.99719854797979801" green="0.99719854797979801" blue="0.99719854797979801" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="selectPhoto:" destination="ccu-fa-aSe" eventType="touchUpInside" id="Mak-Er-S0m"/>
                                 </connections>
